<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.main.ProductCreator">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:paddingHorizontal="30dp"
                android:text="Complete los campos para crear un producto"
                android:textAlignment="center"
                android:textSize="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:paddingTop="30dp"
                android:text="Titulo" />

            <EditText
                android:id="@+id/editTextProductTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:hint="Titulo"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:paddingTop="30dp"
                android:text="Descripcion" />

            <EditText
                android:id="@+id/editTextProductDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:hint="Descripcion"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:paddingTop="30dp"
                android:text="Precio" />

            <EditText
                android:id="@+id/editTextProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:hint="Precio"
                android:inputType="number"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="Categoria" />

                <Spinner
                    android:id="@+id/categoriesSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:padding="20dp" />
            </LinearLayout>

            <Button
                android:id="@+id/uploadProductImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="175dp"
                android:layout_marginTop="30dp"
                android:text="CARGAR IMAGEN" />

            <Button
                android:id="@+id/createProductButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="175dp"
                android:text="Crear producto"/>

            <Button
                android:id="@+id/confirmChangesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="175dp"
                android:text="Confirmar cambios"
                android:visibility="gone"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:src="@drawable/baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>