<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleRANG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenido a RANG store"
        android:layout_gravity="center"
        android:textSize="32dp"
        android:padding="10dp"
        android:layout_marginTop="125dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Correo electronico"
        android:padding="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"/>

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="example@example.com"
        android:textSize="14dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contraseña"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="contraseña"
        android:textSize="14dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/buttonIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Iniciar sesion"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#2986cc"/>

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/white"
        android:text="Registrarse"
        android:textColor="#2986cc"/>
    <Button
        android:id="@+id/buttonForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Olvidé mi contraseña"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/white"
        android:textSize="10dp"
        android:textColor="#2986cc"/>


</LinearLayout>